| Summary: | ASTERISK-25884: unable to ./configure after ./bootstrap.sh | ||
| Reporter: | Marek Cervenka (cervajs) | Labels: | |
| Date Opened: | 2016-03-31 02:57:43 | Date Closed: | 2016-03-31 09:34:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.8.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | centos 6 32bit autoconf-2.63-5.1.el6.noarch automake-1.11.1-4.el6.noarch pjproject 2.4.5 | Attachments: | |
| Description: | unable to ./configure after ./bootstrap.sh
[root@ipbxdev6 asterisk-13.8.0]# ./bootstrap.sh Generating the configure script ... [root@ipbxdev6 asterisk-13.8.0]# ./configure ... checking linux/soundcard.h usability... yes checking linux/soundcard.h presence... yes checking for linux/soundcard.h... yes checking for pg_config... no ./configure: line 42914: syntax error near unexpected token `$PJPROJECT_DIR' ./configure: line 42914: ` PJPROJECT_CONFIGURE($PJPROJECT_DIR)' | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-03-31 02:57:44.728-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Marek Cervenka (cervajs) 2016-03-31 03:06:29.788-0500 relevant part of generated configure if test "$USE_PJPROJECT" != "no" ; then if test "$PJPROJECT_BUNDLED" = "yes" ; then --->line 42914 PJPROJECT_CONFIGURE($PJPROJECT_DIR) else if test "x${PBX_PJPROJECT}" != "x1" -a "${USE_PJPROJECT}" != "no"; then pkg_failed=no { $as_echo "$as_me:$LINENO: checking for PJPROJECT" >&5 $as_echo_n "checking for PJPROJECT... " >&6; } if test -n "$PJPROJECT_CFLAGS"; then pkg_cv_PJPROJECT_CFLAGS="$PJPROJECT_CFLAGS" elif test -n "$PKG_CONFIG"; then if test -n "$PKG_CONFIG" && \ By: George Joseph (gjoseph) 2016-03-31 08:44:48.158-0500 See if this patch fixes the issue. It should. By: Marek Cervenka (cervajs) 2016-03-31 09:01:28.848-0500 patch missing? By: George Joseph (gjoseph) 2016-03-31 09:11:57.318-0500 Sorry. :) https://gerrit.asterisk.org/#/c/2449/ By: Marek Cervenka (cervajs) 2016-03-31 09:22:41.409-0500 works great [root@ipbxdev6 asterisk-13.8.0]# patch -p1 < d963a337.diff patching file bootstrap.sh patching file configure patching file configure.ac patching file third-party/pjproject/Makefile.rules patching file third-party/pjproject/patches/0002-aconfigure.ac-Fix-autoconf-issue-with-opencore-amrnb.patch patching file third-party/pjproject/patches/config_site.h [root@ipbxdev6 asterisk-13.8.0]# ./bootstrap.sh Generating the configure script ... [root@ipbxdev6 asterisk-13.8.0]# ./configure ... configure: Package configured for: configure: OS type : linux-gnu configure: Host CPU : i686 configure: build-cpu:vendor:os: i686 : pc : linux-gnu : configure: host-cpu:vendor:os: i686 : pc : linux-gnu : | ||